--- a/package.json
+++ b/package.json
@@ -7,12 +7,21 @@
   "author": "Michał Pierzchała <thymikee@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "ts-jest": "~23.10.5"
+    "@angular/common": "^7.2.4",
+    "@angular/compiler": "^7.2.4",
+    "@angular/core": "^7.2.4",
+    "@angular/platform-browser": "^7.2.4",
+    "@angular/platform-browser-dynamic": "^7.2.4",
+    "core-js": "^2.6.4",
+    "rxjs": "^6.4.0",
+    "ts-jest": "~23.10.5",
+    "zone.js": "^0.8.29"
   },
   "devDependencies": {
-    "@types/node": "^10.12.12",
     "@types/jest": "^23.3.10",
-    "jest": "^23.6.0",
+    "@types/node": "^10.12.12",
+    "jest": "^24.1.0",
+    "jest-preset-angular": "^6.0.2",
     "typescript": "^3.2.1"
   },
   "peerDependencies": {
@@ -21,13 +30,17 @@
     "jest": "^23.0.0"
   },
   "jest": {
-    "preset": "ts-jest",
+    "preset": "jest-preset-angular",
+    "setupTestFrameworkScriptFile": "<rootDir>/src/setupJest.ts",
     "globals": {
       "ts-jest": {
         "tsConfig": "<rootDir>/tsconfig.spec.json"
       }
     },
-    "rootDir": "__tests__"
+    "testPathIgnorePatterns": [
+      "<rootDir>/example/",
+      "<rootDir>/__tests__/InlineHtmlStripStylesTransformer.test.ts"
+    ]
   },
   "scripts": {
     "build": "tsc",
