--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@angular/core": "^7.2.4",
     "@angular/platform-browser": "^7.2.4",
     "@angular/platform-browser-dynamic": "^7.2.4",
+    "axios": "^0.18.0",
     "core-js": "^2.6.4",
     "rxjs": "^6.4.0",
     "ts-jest": "~23.10.5",
