--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@angular/platform-browser-dynamic": "^7.2.4",
     "axios": "^0.18.0",
     "core-js": "^2.6.4",
+    "jest-changed-files": "^24.0.0",
     "rxjs": "^6.4.0",
     "ts-jest": "~23.10.5",
     "zone.js": "^0.8.29"
