'Timer Mocks' part done.

--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
   "scripts": {
     "build": "tsc",
     "prepare": "npm run build",
-    "test": "jest",
+    "test": "jest --verbose",
     "test:ci": "jest -i"
   }
 }
